add test, grunt, and error serializer
