# swagger.yml
@@ -1,20 +1,20 @@
 swagger: '2.0'
 info:
-  title: GFW API
-  description: Global Forest Watch
+  title: Example microservice
+  description: Example microservice
   version: "1.0.0"
-host: api.globalforestwath.org
+host: example.vizzuality.com
 
 schemes:
   - https
   - http
 # will be prefixed to all paths
-basePath: /v1
+basePath: /api/v1
 produces:
   - application/json
 
 paths:
-  /countries:
+  /users:
     get:
       summary: Users
       description: |
